--- a/src/Components/pages/styles/products.css
+++ b/src/Components/pages/styles/products.css
@@ -132,11 +132,15 @@
   width: 277px;
   border: 1px solid rgb(201, 201, 201);
   transition: all 0.2s ease;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 .product-list-container li:hover {
   box-shadow: 0px 0px 10px 0px rgb(183, 183, 183);
   ;
+  transform: translateY(-5px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .product-list-container li:nth-child(3n+1) {
